--- a/apk/res/values-lt/strings.xml
+++ b/apk/res/values-lt/strings.xml
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"neįgaliųjų vežimėlio pastūmimai"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Skaityti neįgaliųjų vežimėlio pastūmimų duomenis"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Rašyti neįgaliųjų vežimėlio pastūmimų duomenis"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Pagrindinis medžiagų apykaitos greitis"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"pagrindinis medžiagų apykaitos greitis"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Skaityti pagrindinio medžiagų apykaitos greičio duomenis"</string>
