--- a/apk/res/values-b+sr+Latn/strings.xml
+++ b/apk/res/values-b+sr+Latn/strings.xml
@@ -196,6 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"guranje invalidskih kolica"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Čitanje podataka o guranju invalidskih kolica"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Upisivanje podataka o guranju invalidskih kolica"</string>
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"Intenzitet aktivnosti"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"intenzitet aktivnosti"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"Čitanje podataka o intenzitetu aktivnosti"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"Pisanje podataka o intenzitetu aktivnosti"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Bazalni metabolizam"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"bazalni metabolizam"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Čitanje podataka o bazalnom metabolizmu"</string>
@@ -1148,12 +1152,9 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Želite trajno da izbrišete izabrane unose u: <xliff:g id="APP_NAME">%1$s</xliff:g> za <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Želite trajno da izbrišete ovaj unos u: <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Želite trajno da izbrišete podatke tipa <xliff:g id="DATA_TYPE">%1$s</xliff:g> za <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
-    <!-- no translation found for on (8266542510798355807) -->
-    <skip />
-    <!-- no translation found for off (6996623844428550649) -->
-    <skip />
-    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
-    <skip />
+    <string name="on" msgid="8266542510798355807">"Uključeno"</string>
+    <string name="off" msgid="6996623844428550649">"Isključeno"</string>
+    <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Pristupljeno: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Pristupano juče: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Pristupano: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
