--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"ωθήσεις αναπηρικού αμαξιδίου"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Ανάγνωση δεδομένων ωθήσεων αναπηρικού αμαξιδίου"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Εγγραφή δεδομένων ωθήσεων αναπηρικού αμαξιδίου"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Βασικός ρυθμός μεταβολισμού"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"βασικός ρυθμός μεταβολισμού"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Ανάγνωση δεδομένων βασικού ρυθμού μεταβολισμού"</string>
@@ -1148,12 +1156,9 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Οριστική διαγραφή των επιλεγμένων καταχωρίσεων της εφαρμογής <xliff:g id="APP_NAME">%1$s</xliff:g> για τον μήνα <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>;"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Οριστική διαγραφή αυτής της καταχώρισης της εφαρμογής <xliff:g id="APP_NAME">%s</xliff:g>;"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Να διαγραφούν οριστικά τα δεδομένα <xliff:g id="DATA_TYPE">%1$s</xliff:g> για την εφαρμογή <xliff:g id="APP_NAME">%2$s</xliff:g>;"</string>
-    <!-- no translation found for on (8266542510798355807) -->
-    <skip />
-    <!-- no translation found for off (6996623844428550649) -->
-    <skip />
-    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
-    <skip />
+    <string name="on" msgid="8266542510798355807">"Ενεργό"</string>
+    <string name="off" msgid="6996623844428550649">"Ανενεργό"</string>
+    <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Πρόσβαση στις <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Πρόσβαση χθες, στις <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Πρόσβαση στις <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
