--- a/apk/res/values-fr/strings.xml
+++ b/apk/res/values-fr/strings.xml
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"poussées de fauteuil roulant"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Lire les poussées de fauteuil roulant"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Modifier les poussées de fauteuil roulant"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Métabolisme de base"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"métabolisme de base"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Lire le métabolisme de base"</string>
@@ -668,7 +676,7 @@
     <string name="boot_camp" msgid="1554811887379786226">"Camp d\'entraînement"</string>
     <string name="boxing" msgid="2200194516739940317">"Boxe"</string>
     <string name="burpee" msgid="1434605818712603589">"Burpees"</string>
-    <string name="calisthenics" msgid="9080623890020954493">"Entraînement au poids du corps"</string>
+    <string name="calisthenics" msgid="9080623890020954493">"Callisthénie"</string>
     <string name="cricket" msgid="7543586707938752011">"Cricket"</string>
     <string name="crunch" msgid="4265356947720591896">"Abdos crunch"</string>
     <string name="dancing" msgid="4099572666298130171">"Danse"</string>
@@ -1148,12 +1156,9 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Supprimer définitivement les entrées sélectionnées de l\'application <xliff:g id="APP_NAME">%1$s</xliff:g> pour <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Supprimer définitivement cette entrée de l\'application <xliff:g id="APP_NAME">%s</xliff:g> ?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Supprimer définitivement les données de type <xliff:g id="DATA_TYPE">%1$s</xliff:g> pour l\'appli <xliff:g id="APP_NAME">%2$s</xliff:g> ?"</string>
-    <!-- no translation found for on (8266542510798355807) -->
-    <skip />
-    <!-- no translation found for off (6996623844428550649) -->
-    <skip />
-    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
-    <skip />
+    <string name="on" msgid="8266542510798355807">"Activé"</string>
+    <string name="off" msgid="6996623844428550649">"Désactivé"</string>
+    <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Dernière consultation : <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Dernière consultation : hier, à <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Dernière consultation : <xliff:g id="TIME_DATE_0">%1$s</xliff:g><xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
