--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -108,40 +108,40 @@
     <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"Пристап до сите податоци во заднина"</string>
     <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"Пристап до здравствената евиденција во заднина"</string>
     <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"Пристап до податоците за фитнес и благосостојба во заднина"</string>
-    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"Дозволете апликацијава да пристапува до податоците за фитнес и благосостојба, како и до здравствената евиденција кога не ја користите апликацијата"</string>
-    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"Дозволете апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
-    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Дозволете апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"Дозволете ѝ на апликацијава да пристапува до податоците за фитнес и благосостојба, како и до здравствената евиденција кога не ја користите апликацијата"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"Дозволете ѝ на апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Дозволете ѝ на апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Пристап до податоците во заднина"</string>
-    <string name="background_read_combined_request_description" msgid="2423480522986545286">"Дозволете апликацијава да пристапува до податоците од Health Connect кога не ја користите апликацијата"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"Дозволете ѝ на апликацијава да пристапува до податоците од Health Connect кога не ја користите апликацијата"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Пристап до минатите податоци за фитнес и благосостојба"</string>
-    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Дозволете апликацијава да пристапува до податоците додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Дозволете апликацијава да пристапува до сите минати податоци"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Дозволете ѝ на апликацијава да пристапува до податоците додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Дозволете ѝ на апликацијава да пристапува до сите минати податоци"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"Пристап до минатите податоци"</string>
-    <string name="history_read_combined_request_description" msgid="1437787086896636484">"Дозволете апликацијава да пристапува до податоците од Health Connect додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Дозволете апликацијава да пристапува до сите минати податоци од Health Connect"</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"Дозволете ѝ на апликацијава да пристапува до податоците од Health Connect додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Дозволете ѝ на апликацијава да пристапува до сите минати податоци од Health Connect"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g> веќе може да пристапува до минатите податоци за здравствената евиденција"</string>
     <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"Прочитајте повеќе за дозволите"</string>
     <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"Пристап до сите податоци во заднина"</string>
     <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"Пристап до здравствената евиденција во заднина"</string>
     <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"Пристап до податоците за фитнес и благосостојба во заднина"</string>
-    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"Дозволете апликацијава да пристапува до податоците за фитнес и благосостојба, како и до здравствената евиденција кога не ја користите апликацијата"</string>
-    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"Дозволете апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
-    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Дозволете апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"Дозволете ѝ на апликацијава да пристапува до податоците за фитнес и благосостојба, како и до здравствената евиденција кога не ја користите апликацијата"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"Дозволете ѝ на апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Дозволете ѝ на апликацијава да пристапува до податоциве кога не ја користите апликацијата"</string>
     <string name="background_read_access_title" msgid="4184498185599147117">"Пристап до податоците во заднина"</string>
-    <string name="background_read_access_description" msgid="2360433029368320323">"Дозволете апликацијава да пристапува до податоците од Health Connect кога не ја користите апликацијата"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"Дозволете ѝ на апликацијава да пристапува до податоците од Health Connect кога не ја користите апликацијата"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Пристап до минатите податоци за фитнес и благосостојба"</string>
-    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Дозволете апликацијава да пристапува до податоците додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Дозволете апликацијава да пристапува до сите минати податоци"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Дозволете ѝ на апликацијава да пристапува до податоците додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Дозволете ѝ на апликацијава да пристапува до сите минати податоци"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"Пристап до минатите податоци"</string>
-    <string name="history_read_access_description" msgid="800722432229526128">"Дозволете апликацијава да пристапува до податоците од Health Connect додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Дозволете апликацијава да пристапува до сите минати податоци од Health Connect"</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"Дозволете ѝ на апликацијава да пристапува до податоците од Health Connect додадени пред <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Дозволете ѝ на апликацијава да пристапува до сите минати податоци од Health Connect"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"Во моментов не се читаат податоци за фитнес бидејќи <xliff:g id="APP_NAME">%1$s</xliff:g> нема доделени дозволи за читање"</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> веќе може да пристапува до минатите податоци за вашата здравствена евиденција. За да го промените ова, исклучете ги дозволите за здравствената евиденција за апликацијава"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Управувајте со дозволите за здравствената евиденција"</string>
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"Овозможете најмалку една дозвола за читање за да вклучите пристап на апликацијата до податоците во заднина или пристап до минатите податоци"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"Овозможете најмалку една дозвола за читање за да вклучите пристап во заднина за апликацијава"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"Овозможете најмалку една дозвола за читање за да вклучите пристап до минати податоци за апликацијава"</string>
-    <string name="historic_access_description" msgid="3309195636349468633">"Дозволете апликацијава да пристапува до сите минати податоци од Health Connect"</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"Дозволете ѝ на апликацијава да пристапува до сите минати податоци од Health Connect"</string>
     <string name="background_read_description" msgid="3203594555849969283">"Дозволете ѝ на апликацијава да пристапува до податоците од Health Connect кога не ја користите апликацијата"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Активно потрошени калории"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"активно потрошени калории"</string>
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"туркања на инвалидска количка"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Запишување туркања на инвалидска количка"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Читање туркања на инвалидска количка"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Основна метаболичка стапка"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"основна метаболичка стапка"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Читање основна метаболичка стапка"</string>
@@ -1148,12 +1156,9 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Да се избришат трајно избраните записи од <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Да се избришe трајно записов во <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Да се избришат трајно податоците за <xliff:g id="DATA_TYPE">%1$s</xliff:g> за <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
-    <!-- no translation found for on (8266542510798355807) -->
-    <skip />
-    <!-- no translation found for off (6996623844428550649) -->
-    <skip />
-    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
-    <skip />
+    <string name="on" msgid="8266542510798355807">"Вклучено"</string>
+    <string name="off" msgid="6996623844428550649">"Исклучено"</string>
+    <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Пристапено: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Пристапено вчера: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Пристапено: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
