--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -142,7 +142,7 @@
     <string name="additional_access_background_footer" msgid="1638739578431818525">"Ative, pelo menos, uma autorização de leitura para ativar o acesso em segundo plano para esta app"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"Ative, pelo menos, uma autorização de leitura para ativar o acesso a dados antigos para esta app"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"Permitir que esta app aceda a todos os dados anteriores da Saúde Connect"</string>
-    <string name="background_read_description" msgid="3203594555849969283">"Permitir que esta app aceda aos dados da Saúde Connect quando não estiver a usá-la"</string>
+    <string name="background_read_description" msgid="3203594555849969283">"Permita que esta app aceda aos dados da Saúde Connect quando não estiver a usá-la"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Calorias queimadas em atividade"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"calorias queimadas em atividade"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Ler calorias queimadas em atividade"</string>
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"empurrar cadeira de rodas"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Ler dados de empurrar cadeira de rodas"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Escrever dados de empurrar cadeira de rodas"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Taxa metabólica basal"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"taxa metabólica basal"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Ler taxa metabólica basal"</string>
