--- a/apk/res/values-sv/strings.xml
+++ b/apk/res/values-sv/strings.xml
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"armtag på rullstol"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Läsbehörighet för armtag på rullstol"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Skrivbehörighet för armtag på rullstol"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Basalomsättning"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"basalomsättning"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Läsbehörighet för basalomsättning"</string>
@@ -534,7 +542,7 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Öppna Play Butik"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Kom igång med Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect lagrar din hälso- och träningsdata, så att du enkelt kan synkronisera olika appar på enheten"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect lagrar och synkroniserar din hälso- och träningsdata från olika appar.\n\n"<b>"Tränings- och hälsodata,"</b>" inklusive träningspass, steg, kost, sömn med mera\n\n"<b>"hälsojournaler,"</b>" inklusive vaccinationer, labbresultat med mera"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect lagrar och synkroniserar din hälso- och träningsdata från olika appar.\n\n"<b>"Tränings- och hälsodata,"</b>" inklusive träningspass, steg, kost, sömn med mera\n\n"<b>"Hälsojournaler,"</b>" inklusive vaccinationer, labbresultat med mera"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Med Health Connect kan du"</string>
     <string name="share_data" msgid="3481932156368883946">"Dela data med dina appar"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Välj vilken data varje app får läs- eller skrivbehörighet till för Health Connect"</string>
@@ -1148,12 +1156,9 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Vill du radera de markerade <xliff:g id="APP_NAME">%1$s</xliff:g>-posterna från <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> permanent?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Vill du radera <xliff:g id="APP_NAME">%s</xliff:g>-posten permanent?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Vill du radera <xliff:g id="DATA_TYPE">%1$s</xliff:g>-data för <xliff:g id="APP_NAME">%2$s</xliff:g> permanent?"</string>
-    <!-- no translation found for on (8266542510798355807) -->
-    <skip />
-    <!-- no translation found for off (6996623844428550649) -->
-    <skip />
-    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
-    <skip />
+    <string name="on" msgid="8266542510798355807">"På"</string>
+    <string name="off" msgid="6996623844428550649">"Av"</string>
+    <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Öppnades <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Öppnades i går <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Öppnades <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
