--- a/apk/res/values-uk/strings.xml
+++ b/apk/res/values-uk/strings.xml
@@ -142,7 +142,7 @@
     <string name="additional_access_background_footer" msgid="1638739578431818525">"Надайте принаймні один дозвіл на перегляд, щоб увімкнути для цього додатка доступ у фоновому режимі"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"Надайте принаймні один дозвіл на перегляд, щоб увімкнути для цього додатка доступ до минулих даних"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"Дозволити цьому додатку доступ до всіх минулих даних Health Connect"</string>
-    <string name="background_read_description" msgid="3203594555849969283">"Дозвольте цьому додатку доступ до даних Health Connect, коли ви не користуєтеся ним"</string>
+    <string name="background_read_description" msgid="3203594555849969283">"Дозволити цьому додатку доступ до даних Health Connect, коли ви не користуєтеся ним"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Спалені калорії під час активності"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"кількість спалених активних калорій"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Зчитувати кількість спалених активних калорій"</string>
@@ -196,6 +196,14 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"поштовхи інвалідного візка"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Зчитувати кількість поштовхів інвалідного візка"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Записувати кількість поштовхів інвалідного візка"</string>
+    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
+    <skip />
+    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
+    <skip />
+    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
+    <skip />
+    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
+    <skip />
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Швидкість основного обміну речовин"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"швидкість основного обміну речовин"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Зчитувати швидкість основного обміну речовин"</string>
@@ -1148,12 +1156,9 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Видалити назавжди вибрані записи додатка <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Видалити назавжди цей запис додатка <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Назавжди видалити дані (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) для додатка <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
-    <!-- no translation found for on (8266542510798355807) -->
-    <skip />
-    <!-- no translation found for off (6996623844428550649) -->
-    <skip />
-    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
-    <skip />
+    <string name="on" msgid="8266542510798355807">"Увімкнено"</string>
+    <string name="off" msgid="6996623844428550649">"Вимкнено"</string>
+    <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Останній доступ:: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Доступ отримано вчора: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Доступ отримано: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
